Implementing User Photo

--- a/CaloriesTracking.Api/appsettings.json
+++ b/CaloriesTracking.Api/appsettings.json
@@ -1,7 +1,13 @@
 {
   "ConnectionStrings": {
-    "CaloriesTrackingDb": ""
+    "CaloriesTrackingDb": "",
+    "AzureWebJobsStorage": ""
   },
+  "thumbnailDimension": "",
+  "maxFileSizeInMb": "",
+  "minutesBlobStorageUrlExpiresIn": "",
+  "SendGridApiKey": "",
+  "azureContainerName": "",
   "allowedDomains": "",
   "showSwagger": false,
   "JwtSettings": {
