--- a/CaloriesTracking.Common/CaloriesTracking.Common.csproj
+++ b/CaloriesTracking.Common/CaloriesTracking.Common.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="MailKit" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3-beta1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.27.0" />
