--- a/CaloriesTracking.Api/appsettings.json
+++ b/CaloriesTracking.Api/appsettings.json
@@ -9,6 +9,7 @@
   "SendGridApiKey": "",
   "azureContainerName": "",
   "allowedDomains": "",
+  "AngularAppUrl": "",
   "showSwagger": false,
   "JwtSettings": {
     "jwtIssuer": "",
