Authenticication enpoints added, verification email, change email and forgot-password

--- a/CaloriesTracking.Api/appsettings.json
+++ b/CaloriesTracking.Api/appsettings.json
@@ -7,16 +7,14 @@
   "maxFileSizeInMb": "",
   "minutesBlobStorageUrlExpiresIn": "",
   "SendGridApiKey": "",
-  "azureContainerName": "",
   "allowedDomains": "",
   "AngularAppUrl": "",
   "showSwagger": false,
-  "JwtSettings": {
-    "jwtIssuer": "",
-    "jwtAudience": "",
-    "durationInMinutes": 10,
-    "jwtKey": ""
-  },
+  "jwtIssuer": "",
+  "jwtAudience": "",
+  "durationInMinutes": "",
+  "minutesVerificationCodeIsValid": "",
+  "jwtKey": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
