--- a/CaloriesTracking.Core/CaloriesTracking.Core.csproj
+++ b/CaloriesTracking.Core/CaloriesTracking.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="SkiaSharp" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.3" />
   </ItemGroup>
 
   <ItemGroup>
