Google authentication implemented

--- a/CaloriesTracking.Api/appsettings.json
+++ b/CaloriesTracking.Api/appsettings.json
@@ -15,6 +15,7 @@
   "durationInMinutes": "",
   "minutesVerificationCodeIsValid": "",
   "jwtKey": "",
+  "GoogleClientId": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
