--- a/CaloriesTracking.Api/appsettings.json
+++ b/CaloriesTracking.Api/appsettings.json
@@ -3,18 +3,18 @@
     "CaloriesTrackingDb": "",
     "AzureWebJobsStorage": ""
   },
-  "thumbnailDimension": "400",
-  "maxFileSizeInMb": "400",
-  "minutesBlobStorageUrlExpiresIn": "400",
+  "thumbnailDimension": "",
+  "maxFileSizeInMb": "",
+  "minutesBlobStorageUrlExpiresIn": "",
   "SendGridApiKey": "",
-  "allowedDomains": "https://localhost:4200,http://localhost:4200",
-  "AngularAppUrl": "http://localhost:4200",
-  "showSwagger": false,
-  "jwtIssuer": "CaloriesTrackingAPI",
-  "jwtAudience": "CaloriesTrackingAPI",
-  "durationInMinutes": "500",
-  "minutesVerificationCodeIsValid": "500",
-  "jwtKey": "welgih2389fgw89bciu13780fviawupvfb9812gf89",
+  "allowedDomains": "",
+  "AngularAppUrl": "",
+  "showSwagger": true,
+  "jwtIssuer": "",
+  "jwtAudience": "",
+  "durationInMinutes": "",
+  "minutesVerificationCodeIsValid": "",
+  "jwtKey": "",
   "GoogleClientId": "",
   "Logging": {
     "LogLevel": {
