--- a/CaloriesTracking.Data/CaloriesTracking.Data.csproj
+++ b/CaloriesTracking.Data/CaloriesTracking.Data.csproj
@@ -8,8 +8,7 @@
     
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
-    <PackageReference Include="EFCore.BulkExtensions.SqlServer" Version="7.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.18" />
   </ItemGroup>
 
   <ItemGroup>
